--- a/package.json
+++ b/package.json
@@ -9,13 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
+    "@material-tailwind/react": "^2.1.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@auth/mongodb-adapter": "^2.0.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "connect-redis": "^7.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.2",
+    "next-auth": "^4.23.1",
+    "next-connect": "^1.0.0",
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "redis": "^4.6.8",
+    "validator": "^13.11.0",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
+    "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-hook-form": "^7.46.1",
+    "react-redux": "^8.1.2",
+    "realm-web": "^2.0.0",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "tailwindcss": "3.3.3",
+    "yup": "^1.2.0"
   }
 }
