--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "rxjs": "^7.8.1",
     "tailwindcss": "3.3.3",
     "validator": "^13.11.0",
     "yup": "^1.2.0"
