--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,3 @@
 MONGODB_URI="mongodb+srv://genkisystemsbo.crevluj.mongodb.net/" --apiVersion 1 --username bellian-genki
+MONGO_PASS =""
+API_URL="localhost:3000/api/v1/"
